# compact-native-image

./: .gitignore  Dockerfile  README.md  build.sh  image_requirements.md  test.sh
test/: CMakeLists.txt  Dockerfile  greeter_server.cpp
